Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EJ6LCKBE7F"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-EJ6LCKBE7F');
+    </script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TNL - Servicios de Logística y Transporte</title>
     <meta name="description"
@@ -264,7 +274,8 @@
 
                 <div class="gallery__grid">
                     <div class="gallery__item">
-                        <img src="assets/ImagenCamionGrandeControlTemperatura.jpg" alt="Flota de transporte" class="gallery__img">
+                        <img src="assets/ImagenCamionGrandeControlTemperatura.jpg" alt="Flota de transporte"
+                            class="gallery__img">
                         <div class="gallery__overlay">
                             <h3 class="gallery__title">Flota Especializada</h3>
                             <p class="gallery__description">Vehículos con temperatura controlada</p>
@@ -272,7 +283,8 @@
                     </div>
 
                     <div class="gallery__item">
-                        <img src="assets/ImagenContenedorControlTemperatura.jpg" alt="Almacén logístico" class="gallery__img">
+                        <img src="assets/ImagenContenedorControlTemperatura.jpg" alt="Almacén logístico"
+                            class="gallery__img">
                         <div class="gallery__overlay">
                             <h3 class="gallery__title">Almacenes Modernos</h3>
                             <p class="gallery__description">Instalaciones de última generación</p>
@@ -378,7 +390,8 @@
                         </div>
                         <div class="contact__details">
                             <h3 class="contact__title">Teléfono </h3>
-                            <p class="contact__text"> Horario de Atención <br> Lunes a Viernes <br> 8:30 AM - 5:30 PM <br> +34 917467197</p>
+                            <p class="contact__text"> Horario de Atención <br> Lunes a Viernes <br> 8:30 AM - 5:30 PM
+                                <br> +34 917467197</p>
                             <a href="tel:+34 917467197" class="contact__button">
                                 <i class="fas fa-phone"></i> Llamar Ahora
                             </a>
@@ -392,7 +405,8 @@
                         <div class="contact__details">
                             <!-- TODO -->
                             <h3 class="contact__title">Correo Electrónico</h3>
-                            <p class="contact__text">tnlservicios@tnlservicios.com <br> tnlfacturacion@tnlservicios.com <br> tnlnacional@tnlservicios.com</p>
+                            <p class="contact__text">tnlservicios@tnlservicios.com <br> tnlfacturacion@tnlservicios.com
+                                <br> tnlnacional@tnlservicios.com</p>
                             <a href="mailto:tnlservicios@tnlservicios.com" class="contact__button">
                                 <i class="fas fa-envelope"></i> Enviar Email
                             </a>
@@ -513,7 +527,8 @@
                         <li><a href="#servicios" class="footer__link">Transporte Controlado</a></li>
                         <li><a href="#servicios" class="footer__link">Operaciones Aeroportuarias</a></li>
                         <li><a href="#servicios" class="footer__link">Gestión Aduanal</a></li>
-                        <li><a href="#servicios" class="footer__link">Distribución de Médicamentos para uso Humano</a></li> 
+                        <li><a href="#servicios" class="footer__link">Distribución de Médicamentos para uso Humano</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -522,7 +537,7 @@
                     <ul class="footer__list">
                         <li><a href="#nosotros" class="footer__link">Quiénes Somos</a></li>
                         <li><a href="#galeria" class="footer__link">Galería</a></li>
-                        <li><a href="#contacto" class="footer__link">Contacto</a></li>                        
+                        <li><a href="#contacto" class="footer__link">Contacto</a></li>
                         <!-- <li><a href="#" class="footer__link">Política de Privacidad</a></li>
                         <li><a href="#" class="footer__link">Términos y Condiciones</a></li> -->
                     </ul>
