--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <!-- Google tag (gtag.js) -->
-    <script type="text/plain" data-cookieconsent="statistics" async src="https://www.googletagmanager.com/gtag/js?id=G-EJ6LCKBE7F"></script>
-    <script type="text/plain" data-cookieconsent="statistics">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EJ6LCKBE7F"></script>
+    <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-EJ6LCKBE7F');
     </script>
-
-    <!-- Cookiebot -->
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="f3c0899a-d5ce-465c-88e8-581f9079745e" data-blockingmode="auto" type="text/javascript"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TNL - Servicios de Logística y Transporte</title>
